[FEATURE] Get version app
