# src/controllers/baseController.go
@@ -3,6 +3,8 @@ package controllers
 import (
 	"go.mongodb.org/mongo-driver/mongo"
 	"net/http"
+	middlewares "orlangur.link/services/mini.note/handlers"
+	"orlangur.link/services/mini.note/models"
 )
 
 // Controller -> base controller
@@ -13,6 +15,29 @@ type Controller struct {
 // BaseController -> base controller
 func BaseController(mg *mongo.Client) Controller {
 	return Controller{mg}
+}
+
+// GetVersion godoc
+// @Summary      Get version
+// @Description  Get version app
+// @Tags         Help
+// @Produce      json
+// @Success      200  {object}  models.UniversalDTO "Version"
+// @Failure      400  {object}  models.UniversalDTO "error"
+// @Failure      404  {object}  models.UniversalDTO "error"
+// @Failure      500  {object}  models.UniversalDTO "error"
+// @Router       /version [get]
+func (c Controller) GetVersion(response http.ResponseWriter, request *http.Request) {
+	data := struct {
+		Version string
+		Author  string
+		Contact string
+	}{
+		Version: models.Version,
+		Author:  "Alexey (Orlangur)",
+		Contact: "o@orlangur.link",
+	}
+	middlewares.SuccessResponse(data, response)
 }
 
 // Pagination -> create pagination for item
